revert some deps